# services/py-genai-helper/generated/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2026-06-27T15:07:04+00:00
+#   timestamp: 2026-06-27T15:54:38+00:00
 
 from __future__ import annotations
 from pydantic import AwareDatetime, BaseModel, Field, SecretStr
@@ -18,12 +18,17 @@ class BadRequestResponse(BaseModel):
     errors: list[ErrorResponse] | None = None
 
 
+class Reference(BaseModel):
+    id: UUID
+    name: str
+
+
 class Sport(BaseModel):
     id: UUID
     name: str
     description: str
     created_at: date
-    directors: list[str]
+    directors: list[Reference]
 
 
 class SportCreate(BaseModel):
@@ -44,9 +49,9 @@ class Team(BaseModel):
     description: str
     created_at: date
     address: str
-    sport: Annotated[UUID, Field(description='ID of the sport this team belongs to.')]
-    trainers: list[str]
-    trainees: list[str]
+    sport: Reference
+    trainers: list[Reference]
+    trainees: list[Reference]
 
 
 class TeamCreate(BaseModel):
@@ -115,16 +120,14 @@ class Event(BaseModel):
     description: str
     start_time: AwareDatetime
     end_time: AwareDatetime
-    attendees: list[str] | None = None
+    attendees: list[Reference] | None = None
     sports_linked: Annotated[
-        list[UUID] | None,
-        Field(description='IDs of the sports associated with this event.'),
+        list[Reference] | None, Field(description='Sports associated with this event.')
     ] = None
     teams_linked: Annotated[
-        list[str] | None,
-        Field(description='IDs of the teams associated with this event.'),
+        list[Reference] | None, Field(description='Teams associated with this event.')
     ] = None
-    creator: str
+    creator: Reference
 
 
 class EventSummary(BaseModel):
@@ -162,18 +165,18 @@ class EventCreate(BaseModel):
 
 class Feedback(BaseModel):
     id: UUID
-    event: str
-    member: str
-    creator: str
+    event: Reference
+    member: Reference
+    creator: Reference
     created_at: AwareDatetime
     feedback: str
 
 
 class FeedbackSummary(BaseModel):
     id: UUID
-    event: str
-    member: str
-    creator: str
+    event: Reference
+    member: Reference
+    creator: Reference
     created_at: AwareDatetime
 
 
@@ -191,8 +194,8 @@ class FeedbackCreate(BaseModel):
 
 class Transaction(BaseModel):
     id: UUID
-    member: str
-    creator: str
+    member: Reference
+    creator: Reference
     amount_cents: int
     created_at: AwareDatetime
     title: str
@@ -214,5 +217,5 @@ class TransactionCreate(BaseModel):
 
 
 class Balance(BaseModel):
-    member: str
+    member: Reference
     balance_cents: int
